Closed
Bug 510849
Opened 17 years ago
Closed 14 years ago
web storage (localStorage/sessionStorage) empty string as key not supported
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: andrea.giammarchi, Assigned: Ms2ger)
References
Details
(Keywords: dev-doc-needed, html5)
Attachments
(1 file)
|
3.27 KB,
patch
|
mayhemer
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.2) Gecko/20090729 Firefox/3.5.2
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.2) Gecko/20090729 Firefox/3.5.2
Accordingly with W3 draft:
Each Storage object provides access to a list of key/value pairs, which are sometimes called items. Keys are strings. Any string (including the empty string) is a valid key.
but this is not true in Firefox
Reproducible: Always
Steps to Reproduce:
1.sessionStorage.setItem("", "test");
2.alert(sessionStorage.getItem(""));
Actual Results:
null
Expected Results:
the string "test"
associate the empty string with the data "string" as other browsers do
Comment 1•17 years ago
|
||
I can confirm this on 3.5.2 (Mac OS X). Dupes not found, marking as new.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•17 years ago
|
Assignee: nobody → general
Component: General → JavaScript Engine
Product: Firefox → Core
QA Contact: general → general
Updated•17 years ago
|
Assignee: general → nobody
Component: JavaScript Engine → DOM: Other
QA Contact: general → general
Updated•16 years ago
|
Assignee: nobody → honzab.moz
Updated•16 years ago
|
Flags: wanted1.9.2?
Updated•16 years ago
|
Keywords: html5
Summary: web storage empty string as key not supported → web storage (localStorage/sessionStorage) empty string as key not supported
Comment 3•16 years ago
|
||
I can confirm this with Firefox 3.6.3 on Mac OS X 10.6.3.
| Assignee | ||
Comment 5•14 years ago
|
||
AFAICT, this works.
| Assignee | ||
Updated•14 years ago
|
Flags: wanted1.9.2?
OS: Windows XP → All
Hardware: x86 → All
Version: unspecified → Trunk
| Assignee | ||
Updated•14 years ago
|
Keywords: dev-doc-needed
Comment 6•14 years ago
|
||
Comment on attachment 623404 [details] [diff] [review]
Patch v1
Review of attachment 623404 [details] [diff] [review]:
-----------------------------------------------------------------
Can you please add a test for this to test_localStorageBase.html, test_sessionStorageBase.html and all storageevent/ tests?
::: dom/imptests/webapps.json
@@ -23,5 @@
> - "All 3 items should be added.": true,
> - "array access should be correct": true,
> - "getItem should be correct": true
> - },
> -
Not sure why you are removing these tests...
Attachment #623404 -
Flags: review?(honzab.moz) → review+
| Assignee | ||
Comment 7•14 years ago
|
||
I'm not removing the tests, just the annotations that they failed.
| Assignee | ||
Comment 8•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla15
Updated•13 years ago
|
Component: DOM: Other → DOM
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•