Bug 510849 - Support the empty string as a key for web storage (localStorage/sessionStorage); r=mayhemer